確認画面追加

--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -8,7 +8,7 @@
   <%= form.submit "登録する" %>
   <%= form.submit "戻る",name:'back' %>
   <% end %>
-
+<!--確認画面追加-->
   
 
   <!--form.hidden_fieldを使用して、入力フォームを生成せず、new Viewからきた値をそのまま、confirmアクションに渡すようにします。-->
